--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
 = Тестовое задание
 
 Каждый потенциальный заказчик просит выполнить тестовое задание. Я хорошо понимаю это требование.
-Всегда хочется быть уверенным, что потенциальный претендент владеет технологиями, о которых 
+Всегда хочется быть уверенным, что претендент владеет технологиями, о которых 
 заявляет.
 
 С другой стороны, тестовое задание редко представляет из себя нечто живое. Обычно, его формулировка
