--- a/README.rdoc
+++ b/README.rdoc
@@ -43,10 +43,10 @@ http://docs.google.com/View?id=dgjq83q7_25fc32sxf8
 == Что видно из кода?
 
 - Я знаю Ruby и Ruby on Rails.
-- Владею git'ом. Все плагины вынесены в сабмодули. Плагин awesome_nested_set - мой форк форка :) 
-  оригинального awesome_nested_set с несколькими полезными улучшениями (#tree, #each_recursive).
-- Я умею читать документацию и разбираться в чужом коде.  Два метода, о которых сказано выше нужны 
-  для рекурсивного обхода дерева с использованием единственного запроса к БД.  
+- Владею git'ом. Все плагины вынесены в сабмодули. 
+- Я умею читать документацию и разбираться в чужом коде. Плагин awesome_nested_set - мой форк 
+  форка :) оригинального awesome_nested_set с несколькими полезными улучшениями (#tree, #each_recursive). 
+  Эти методы нужны для рекурсивного обхода дерева с использованием единственного запроса к БД.
 - Я использую шаблоны проектирования. Это видно из реализации awesome_nested_set#cache, класс TreeProxy.  
 - Я владею TDD. RSpec, RR, machinist и remarkable. В коде есть тесты для двух моделей и контроллера КУ.
   BDD мне тоже не чужд. Cucumber использовал.  
